# hac-client-core

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  release.yml
docs/: getting-started.md  index.md  security.md
docs/api/: auth.md  client.md  exceptions.md  models.md  sessions.md
docs/usage/: authentication.md  flexiblesearch.md  groovy.md  impex.md  sessions.md  system-update.md
src/hac_client_core/: __init__.py  auth.py  client.py  models.py  session.py
