[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hac-client-core"
version = "0.1.0"
description = "Core library for SAP Commerce HAC (Hybris Administration Console) HTTP API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]

